--- a/assets/style.css
+++ b/assets/style.css
@@ -116,3 +116,16 @@ h2 {
     width: 20%;
 
 }
+.compra-finalizada{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    padding: 30px;
+    background: white;
+}
+.compra-parrafo{
+    font-weight: bold;
+    font-size: 1,5rem;
+    padding: 20px;
+    border: 1px solid, black !important;
+}
