--- a/assets/style.css
+++ b/assets/style.css
@@ -5,14 +5,55 @@
 }  
  
 body{
-background-color: rgb(52, 31, 214);
+background-image: url(../assets/img/FondoBlu.png);
 }
 main{
     
-    background-color: darkgray;
+    background-color: transparent;
     margin: 25px;
     
 }
+#navbar-brand{
+    text-decoration: none;
+    display: flex;
+      
+    align-items: center;  
+}
+.product__card {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    width: 23%;
+}
+.card {
+    box-shadow: 5px 5px 15px 5px #000000;
+    background-color: black;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 50px;
+}
+.card-title {
+    margin-bottom: 10px;
+    
+    text-align: center;
+    color: rgb(17, 17, 18);
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card-text {
+    color: #0c0c0c;
+  }
+  .card__price {
+    color: aliceblue;
+  }
+  
+  .btn {
+    background-color: #03adad;
+    align-self: center;
+  }
 
 .pie-de-pagina {
     width: 100%;
@@ -88,44 +129,86 @@ h2 {
 .grupo-2 small {
     font-size: 15px;
 }
-.car-img{
-    width: 80px;
-    height: 80px;
-    margin: 10px;
-}
-.producto-carrito{
-    display:flex;
-    justify-content: space-between ;
-    align-items: center;
-    
-    
-}
+
+
 .product-detail{
     font-weight: bold;
 }
-.total-carrito{
-    display: flex;
-    justify-content: center;
-}
-.total{
-    color: black;
-    font-size: 1.3rem;
-    font-weight: 600;
-}
+
+
 .finalizar{
-    width: 20%;
+    width: 50%;
 
 }
-.compra-finalizada{
+
+
+
+/* carrito */
+.carrito__titulo {
+    color: #111212;
+    text-align: center;
+    font-size: 20px;
+  }
+  .cart-section {
+    padding: 20px;
+  }
+  .cart-container {
+    margin-top: 100px;
+    background-color: black;
+    padding: 20px;
+    color: white;
+    
+  }
+  
+  .compra-finalizada {
+    text-align: center;
+  }
+  
+  .datos-parrafo {
+    text-align: center;
+  }
+  .datos-cliente {
+    display: flex;
+    flex-direction: column;
+  }
+  .producto-carrito {
+    color: #f6f7f7;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .car-img {
+    width: 150px;
+    height: 150px;
+    margin: 5px;
+  }
+  .total-carrito {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
-    padding: 30px;
-    background: white;
-}
-.compra-parrafo{
+  }
+  .total {
+    padding: 5px;
+    border: 1px solid white;
+    background-color: #27429b;
+    border: 1px white;
+    border-radius: 5px;
+    margin: 0px 10px;
     font-weight: bold;
-    font-size: 1,5rem;
-    padding: 20px;
-    border: 1px solid, black !important;
-}
+    font-size: 1.2rem;
+  }
+  
+  .contact__secction__item {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+  }
+  
+  .contact-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .mensaje-final {
+    font-size: 1.5rem;
+    text-align: center;
+  }
